--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -1,3 +1,9 @@
 {
+  "Logging": {
+  "LogLevel": {
+    "Default": "Information",
+    "Microsoft.AspNetCore": "Warning"
+  }
+},
   "CommandService": "http://commands-clusterip-srv:80/api/controllers/Platforms"
 }
