--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "CommandService": "http://localhost:6000/api/controllers/Platforms"
+  "CommandService": "http://localhost:6000/api/controllers/Platforms",
+  "ConnectionStrings":
+  {
+    "PlatformsConnectionString": "Server=localhost,1433;Initial Catalog: platformsdb; User ID: sa; Password: Letmein123!;"
+  }
 }
