--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -5,5 +5,9 @@
     "Microsoft.AspNetCore": "Warning"
   }
 },
-  "CommandService": "http://commands-clusterip-srv:80/api/controllers/Platforms"
+  "CommandService": "http://commands-clusterip-srv:80/api/controllers/Platforms",
+  "ConnectionStrings": 
+  {
+    "PlatformsConnectionString": "Server=mssql-clusterip-srv,1433;Initial Catalog: platformsdb; User ID: sa; Password: Letmein123!;"  
+  }
 }
