[002] Created sql connection and deployment for platform service. Started elaboration of command service

--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -8,6 +8,6 @@
   "CommandService": "http://commands-clusterip-srv:80/api/controllers/Platforms",
   "ConnectionStrings": 
   {
-    "PlatformsConnectionString": "Server=mssql-clusterip-srv,1433;Initial Catalog: platformsdb; User ID: sa; Password: Letmein123!;"  
+    "PlatformsConnectionString": "Server=mssql-clusterip-srv,1433;Initial Catalog=platformsdb; User ID=sa; Password=Letmein123!;TrustServerCertificate=true;"  
   }
 }
