--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -9,5 +9,8 @@
   "ConnectionStrings":
   {
     "PlatformsConnectionString": "Server=mssql-clusterip-srv,1433;Initial Catalog=platformsdb; User ID=sa; Password=Letmein123!;TrustServerCertificate=true;"
-  }
+  },
+  "RabbitMQHost": "localhost",
+  "RabbitMQPort": "5672"
+  
 }
