--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -9,5 +9,7 @@
   "ConnectionStrings": 
   {
     "PlatformsConnectionString": "Server=mssql-clusterip-srv,1433;Initial Catalog=platformsdb; User ID=sa; Password=Letmein123!;TrustServerCertificate=true;"  
-  }
+  },
+  "RabbitMQHost": "rabbitmq-clusterip-srv",
+  "RabbitMQPort": "5672"
 }
